--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </form>
             </div>
             <div class="header__container__cart">
-                <a href="#" class="header__container__cart__link">
+                <a href="/GioHang.html" class="header__container__cart__link">
                     <i class="fas fa-shopping-cart"></i>
                     <span>Giỏ hàng</span>
                     <span>(0)</span>
