--- a/GioHang.html
+++ b/GioHang.html
@@ -195,6 +195,15 @@
             <p> CoppyRight 2020 <i class="far fa-copyright"></i> DecorShop</p>
         </div>
     </footer>
+    <!--back to top-->
+    <div>
+        <button id="btnScrollToTop">
+        <div>
+            <a href="#top-cart"><i class="fal fa-arrow-circle-up"  style="font-size: 3em; color: #aaa;"></i></a>
+        </div>
+        </button>
+    </div>
+
     <script src="/js/GioHang.js"></script>
 </body>
 
