--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="header">
         <div class="header__nav">
             <div class="header__nav__left">
                 <ul>
@@ -862,6 +862,7 @@
             <p> CoppyRight 2020 <i class="far fa-copyright"></i> DecorShop</p>
         </div>
     </footer>
+
 
     <script src="js/main.js"></script>
 </body>
