--- a/index.html
+++ b/index.html
@@ -179,6 +179,17 @@
                 <div class="product__container">
                     <div class="product__title">
                         <p>Sản phẩm trang trí nổi bật</p>
+                        
+                        <div class="catagory">
+                            <button class="th__list" onclick="showListTH()">
+                                <i class="fas fa-th-list"></i>
+                            </button>
+
+                            <button class="th">
+                                <i class="fas fa-th"></i>
+                            </button>
+                        </div>
+                        
                         <div class="btn">
                             <div class="btn-prev" onclick="plushPr(-1)">
                                 <i class="fas fa-angle-left"></i>
